# portfolio-crud-postgres-fastapi-streamlit

./: README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yaml
backend/: Dockerfile  crud.py  database.py  main.py  models.py  requirements.txt  router.py  schemas.py
docs/: index.md
tests/: conftest.py  test_function.py
