[project]
name = "portfolio-crud-postgres-fastapi-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Humberto Lomeu",email = "hcslomeu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic[email,timezone] (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.124.2,<0.125.0)",
    "psycopg (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
